<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="8dp"
    tools:context=".ui.view.ContactActivity">

    <TextView
        android:id="@+id/tvContactTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="16dp"
        android:text="@string/tvContactTitle"
        android:textColor="@color/Navy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTelfLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@android:drawable/ic_menu_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactTitle"/>

    <TextView
        android:id="@+id/tvTelfNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvTelfLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvContactTitle"
        android:layout_marginTop="16dp"
        android:text="@string/tvTelfNumber"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Navy"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvFbLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:minWidth="32dp"
        android:minHeight="40dp"
        app:drawableStartCompat="@drawable/facebook_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTelfLogo" />

    <TextView
        android:id="@+id/tvFbDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvFbLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvTelfNumber"
        android:layout_marginTop="16dp"
        android:text="@string/tvFbDir"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Navy"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvInstaLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:minWidth="32dp"
        android:minHeight="40dp"
        app:drawableStartCompat="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFbLogo"/>

    <TextView
        android:id="@+id/tvInstaDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvInstaLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvFbDir"
        android:layout_marginTop="18dp"
        android:text="@string/tvInstaDir"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Navy"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:minWidth="32dp"
        android:minHeight="40dp"
        app:drawableStartCompat="@android:drawable/ic_menu_myplaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstaLogo"/>

    <TextView
        android:id="@+id/tvWebDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvWeb"
        app:layout_constraintTop_toBottomOf="@+id/tvInstaDir"
        android:layout_marginTop="18dp"
        android:text="@string/tvWebDir"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Navy"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvEmailLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:minWidth="32dp"
        android:minHeight="40dp"
        app:drawableStartCompat="@android:drawable/sym_action_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeb"/>

    <TextView
        android:id="@+id/tvEmailDir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvEmailLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvWebDir"
        android:layout_marginTop="18dp"
        android:text="@string/tvEmailDIr"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Navy"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvAcercaDe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvAcercaDe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/Navy"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailLogo"/>

    <TextView
        android:id="@+id/tvAcercaDeContenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvAcercaDeContenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAcercaDe"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnContactAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContactAtras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>




</androidx.constraintlayout.widget.ConstraintLayout>